# open-xiaoai

./: .dockerignore  README.md
examples/gemini/: README.md
examples/migpt/: README.md
examples/xiaozhi/: Cargo.toml  Dockerfile  README.md  config.py  main.py  pyproject.toml
examples/xiaozhi/client-rust/: Cargo.toml  README.md
examples/xiaozhi/xiaozhi/models/: encoder.onnx.REMOVED.git-id
