[package]
name = "open-xiaoai"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.docker]
inherits = "release"
lto = false           # 关闭LTO，大幅减少编译时间
codegen-units = 16    # 启用并行编译
opt-level = 2         # 适中的优化级别

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
image = "ghcr.io/cross-rs/armv7-unknown-linux-gnueabihf:0.2.5"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.15.1", features = ["v4"] }
rand = "0.9.1"
